--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,24 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(Build.BinariesDirectory'
+    IncludeRootFolder: true
+    archiveType: zip
+    archiveFile: '($Build.ArtifactStagingDirectory/$(Build.BuildId).zip'
+    replaceExistingArchive: true
+    verbose: true
+
+- task: GithubRelease@0
+  displayName: ‘Create GitHub Release’
+  inputs:
+    githubConnection: krack-labs
+    repositoryName: krack-labs/WebGoat.NET
+    tagSource: manual
+    tag: $(Build:BuildNumber)
+    assets: '($Build.ArtifactStagingDirectory/$(Build.BuildId).zip)'
+
 - task: VSTest@2
   inputs:
     platform: '$(buildPlatform)'
