--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,7 @@ steps:
     githubConnection: krack-labs2
     repositoryName: krack-labs/WebGoat.NET
     tagSource: manual
-    tag: $(Build:BuildNumber)
+    tag: '$(Build:BuildNumber)'
     assets: '($Build.ArtifactStagingDirectory)/$(Build.BuildId).zip)'
 
 - task: VSTest@2
