--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ steps:
 
 - task: ArchiveFiles@2
   inputs:
-    rootFolderOrFile: '$(Build.BinariesDirectory'
+    rootFolderOrFile: '$(Build.BinariesDirectory)'
     IncludeRootFolder: true
     archiveType: zip
     archiveFile: '($Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
