--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ steps:
     rootFolderOrFile: '$(Build.BinariesDirectory)'
     IncludeRootFolder: true
     archiveType: zip
-    archiveFile: '($Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
     replaceExistingArchive: true
     verbose: true
 
@@ -43,8 +43,8 @@ steps:
     githubConnection: krack-labs2
     repositoryName: krack-labs/WebGoat.NET
     tagSource: manual
-    tag: '$(Build:BuildNumber)'
-    assets: '($Build.ArtifactStagingDirectory)/$(Build.BuildId).zip)'
+    tag: '1.0'
+    assets: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip)'
 
 - task: VSTest@2
   inputs:
