Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,6 +42,7 @@ steps:
   inputs:
     githubConnection: krack-labs2
     repositoryName: krack-labs/WebGoat.NET
+    action: 'create'
     tagSource: manual
     tag: '1.0'
     assets: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip)'
