--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,8 +44,8 @@ steps:
     repositoryName: krack-labs/WebGoat.NET
     action: 'create'
     tagSource: manual
-    tag: '1.0'
-    assets: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip)'
+    tag: '$(Build.BuildNumber)'
+    assets: 'D:\a\1\a\20.zip'
     assetUploadMode: delete
 
 - task: VSTest@2
