Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,7 @@ steps:
     githubConnection: krack-labs2
     repositoryName: krack-labs/WebGoat.NET
     action: 'create'
-    tagSource: 'gitTag'
+    tagSource: 'auto'
     assets: '$Build.ArtifactStagingDirectory//$(Build.BuildId).zip'
     assetUploadMode: delete
 
