--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,7 @@ steps:
     rootFolderOrFile: '$(Build.SourcesDirectory)/WebGoat/bin'
     IncludeRootFolder: true
     archiveType: zip
-    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/bin.zip'
     replaceExistingArchive: true
     verbose: true
 
@@ -44,8 +44,8 @@ steps:
     repositoryName: krack-labs/WebGoat.NET
     action: 'create'
     tagSource: 'manual'
-    tag: '1.0'
-    assets: '$(Build.ArtifactStagingDirectory)//$(Build.BuildId).zip'
+    tag: '$(Build.BuildNumber)'
+    assets: '$(Build.ArtifactStagingDirectory)\bin.zip'
     assetUploadMode: delete
 
 - task: VSTest@2
