--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,7 +54,7 @@ steps:
     veracodeAppProfile: 'WebGoat.net'
     sandboxName: 
     importType: 'All Flaws'
-    workItemType: 'Bug'
+    workItemType: 'Issue'
     area: '$(system.teamProject)'
     flawImportLimit: '1000'
 
