Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,8 +61,8 @@ steps:
 - task: GithubRelease@0
   displayName: ‘Create GitHub Release’
   inputs:
-    githubConnection: krack-labs2
-    repositoryName: krack-labs/WebGoat.NET
+    githubConnection: wasptree
+    repositoryName: wasptree/WebGoat.NET
     action: 'create'
     tagSource: 'manual'
     tag: '$(Build.BuildNumber)'
