Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,7 @@ steps:
     AnalysisService: 'veracode_scan'
     veracodeAppProfile: 'WebGoat.net'
     version: '$(build.buildNumber)'
-    filepath: '$(build.artifactstagingdirectory)'
+    filepath: '$(build.artifactstagingdirectory)/bin.zip'
     importResults: true
     maximumWaitTime: '360'
 
