--- a/Azure Pipelines/pipeline-scan.yml
+++ b/Azure Pipelines/pipeline-scan.yml
@@ -55,7 +55,7 @@ steps:
 - task: VeracodePipelineScan@0
   displayName: 'Veracode Pipeline Scan'
   inputs:
-    VeracodeAPIID: '${VERACODE_API_ID}'
-    VeracodeAPIsecret: '${VERACODE_API_SECRET}'
+    VeracodeAPIID: '"${VERACODE_API_ID}"'
+    VeracodeAPIsecret: '"${VERACODE_API_SECRET}"'
     fileToScan: '$(Build.ArtifactStagingDirectory)/bin.zip'
     breakPipeline: false
