--- a/Azure Pipelines/nightly-scan.yml
+++ b/Azure Pipelines/nightly-scan.yml
@@ -9,7 +9,7 @@ schedules:
   displayName: Nightly Veracode Security Scan
   branches:
     include:
-    - feature/*
+    - features/*
   always: true
 
 pool:
