--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,9 +54,11 @@ steps:
   inputs:
     ConnectionDetailsSelection: 'Endpoint'
     AnalysisService: 'veracode_scan'
-    veracodeAppProfile: 'WebGoat.net'
+    veracodeAppProfile: 'WebGoat.test'
     version: '$(build.buildNumber)'
     filepath: '$(build.artifactstagingdirectory)/bin.zip'
+    optargs: '-business_criticality low'
+    createProfile: true
     importResults: true
     maximumWaitTime: '360'
 
