--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,7 +58,7 @@ steps:
     veracodeAppProfile: 'WebGoat.test'
     version: '$(build.buildNumber)'
     filepath: '$(build.artifactstagingdirectory)/bin.zip'
-    optargs: 'business_criticality: ''Low'''
+    optargs: '-business_criticality=Low'
     createProfile: true
     importResults: true
     maximumWaitTime: '360'
