Update nightly-scan.yml for Azure Pipelines

--- a/Azure Pipelines/nightly-scan.yml
+++ b/Azure Pipelines/nightly-scan.yml
@@ -64,3 +64,4 @@ steps:
     sandboxName: 'Nightly Scan'
     importResults: true
     maximumWaitTime: '360'
+    optargs: "-include DotNetGoat*,*DTE*"
