--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,7 +60,8 @@ steps:
     createProfile: true
     importResults: true
     maximumWaitTime: '360'
-
+    optargs: "-policy 'Wasptree test Policy'"
+  
 - task: Veracode Flaw Importer@3
   displayName: Veracode Import Scan Findings
   inputs:
