Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,7 +58,7 @@ steps:
     version: '$(build.buildNumber)'
     filepath: '$(build.artifactstagingdirectory)/bin.zip'
     createProfile: true
-    importResults: true
+    importResults: false
     maximumWaitTime: '360'
     optargs: "-policy Wasptree_test_Policy"
   
