Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,6 +60,7 @@ steps:
     createProfile: true
     importResults: false
     maximumWaitTime: '360'
+    failBuildOnPolicyFail: true
     optargs: "-policy Wasptree_test_Policy"
   
 - task: Veracode Flaw Importer@3
