--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,7 +58,7 @@ steps:
     version: '$(build.buildNumber)'
     filepath: '$(build.artifactstagingdirectory)/bin.zip'
     createProfile: true
-    importResults: false
+    importResults: true
     maximumWaitTime: '360'
     failBuildOnPolicyFail: true
     optargs: "-include not-a-module"
