--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,14 +54,14 @@ steps:
   inputs:
     ConnectionDetailsSelection: 'Endpoint'
     AnalysisService: 'veracode_scan'
-    veracodeAppProfile: 'WebGoat.test'
+    veracodeAppProfile: 'WebGoat.new'
     version: '$(build.buildNumber)'
     filepath: '$(build.artifactstagingdirectory)/bin.zip'
     createProfile: true
     importResults: true
     maximumWaitTime: '45'
     failBuildOnPolicyFail: false
-    optargs: "-criticality medium"
+    optargs: '-criticality medium'
   
 - task: Veracode Flaw Importer@3
   displayName: Veracode Import Scan Findings
