--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,9 +45,9 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
-      # Set-ExecutionPolicy AllSigned -Scope Process -Force
-      # iex ((New-Object System.Net.WebClient).DownloadString('https://download.srcclr.com/ci.ps1'))
-      # srcclr scan $(Build.SourcesDirectory)
+      Set-ExecutionPolicy AllSigned -Scope Process -Force
+      iex ((New-Object System.Net.WebClient).DownloadString('https://download.srcclr.com/ci.ps1'))
+      srcclr scan $(Build.SourcesDirectory)
 
 - task: Veracode@3
   displayName: Veracode Policy Scan
