--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,6 +44,7 @@ steps:
   env:
     SRCCLR_API_TOKEN: $(SRCCLR_API_TOKEN)
     https_proxy: 'http://159.65.88.48:8080'
+    SRCCLR_REGION: ER
   inputs:
     targetType: 'inline'
     script: |
