--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,7 +74,8 @@ steps:
       -version {build_version} \
       -selectedpreviously true \
       -scantimeout 30 \
-      -filepath ./verascan \
+      #-filepath ./verascan \
+      -filepath '$(build.artifactstagingdirectory)/bin.zip'
       #-include *.exe \
       #-exclude *.dll
 
