Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,7 +73,7 @@ steps:
           -teams myteam `
           #-sandboxname mysandbox `
           #-createsandbox true `
-          -version {build_version} `
+          -version $(Build.BuildId) `
           -selectedpreviously true `
           -scantimeout 30 `
           #-filepath ./verascan `
