--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,8 +48,8 @@ steps:
       $veracodeWrapperUrl = "https://tools.veracode.com/integrations/API-Wrappers/CSharp/bin/VeracodeCSharpAPI.zip"
       $veracodeWrapperZip = "VeracodeCSharpAPI.zip"
       $veracodeWrapperDir = "VeracodeCSharpAPI"
-      $veracodeAPIKey = ${env:VERACODE_API_ID}
-      $veracodeAPISecret = ${env:VERACODE_API_SECRET}
+      $veracodeAPIKey = $(VERACODE_API_ID)
+      $veracodeAPISecret = $(VERACODE_API_SECRET)
       $veracodeAppID = "WebGoat Auto Package"
       $veracodeSandboxID = "YOUR_VERACODE_SANDBOX_ID"
 
@@ -65,8 +65,8 @@ steps:
       # Run Veracode static analysis using the wrapper
       #.\VeracodeAPI.exe -vid ${env:VERACODE_API_ID} -vkey ${env:VERACODE_API_SECRET} -action UploadAndScan -appid $veracodeAppID
       .\VeracodeC#API.exe -action uploadandscan `
-          -vid ${env:VERACODE_API_ID} `
-          -vkey ${env:VERACODE_API_SECRET} `
+          -vid $veracodeAPIKey `
+          -vkey $veracodeAPISecret `
           -appname "Webgoat AutoPackage" `
           -createprofile true `
           -criticality High `
