--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,8 +48,8 @@ steps:
       $veracodeWrapperUrl = "https://tools.veracode.com/integrations/API-Wrappers/CSharp/bin/VeracodeCSharpAPI.zip"
       $veracodeWrapperZip = "VeracodeCSharpAPI.zip"
       $veracodeWrapperDir = "VeracodeCSharpAPI"
-      $veracodeAPIKey = $(VERACODE_API_ID)
-      $veracodeAPISecret = $(VERACODE_API_SECRET)
+      $veracodeAPIKey = ${env:VERACODE_API_ID}
+      $veracodeAPISecret = ${env:VERACODE_API_KEY}
       $veracodeAppID = "WebGoat Auto Package"
       $veracodeSandboxID = "YOUR_VERACODE_SANDBOX_ID"
 
