--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,8 +65,8 @@ steps:
       # Run Veracode static analysis using the wrapper
       #.\VeracodeAPI.exe -vid ${env:VERACODE_API_ID} -vkey ${env:VERACODE_API_SECRET} -action UploadAndScan -appid $veracodeAppID
       .\VeracodeC#API.exe -action uploadandscan `
-          -vid $veracodeAPIKey `
-          -vkey $veracodeAPISecret `
+          -vid ${env:VERACODE_API_ID} `
+          -vkey ${env:VERACODE_API_KEY} `
           -appname "Webgoat AutoPackage" `
           -createprofile true `
           -criticality High `
