--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,8 +66,8 @@ steps:
       # Run Veracode static analysis using the wrapper
       #.\VeracodeAPI.exe -vid ${env:VERACODE_API_ID} -vkey ${env:VERACODE_API_SECRET} -action UploadAndScan -appid $veracodeAppID
       .\VeracodeC#API.exe -action uploadandscan `
-          -vid $(VERACODE_API_KEY) `
-          -vkey $(VERACODE_API_SECRET) `
+          -vid $VERACODE_API_KEY `
+          -vkey $VERACODE_API_SECRET `
           -appname "Webgoat AutoPackage" `
           -createprofile true `
           -criticality High `
