--- a/Azure Pipelines/pipeline-scan.yml
+++ b/Azure Pipelines/pipeline-scan.yml
@@ -53,6 +53,7 @@ steps:
       Set-ExecutionPolicy AllSigned -Scope Process -Force
       iex ((New-Object System.Net.WebClient).DownloadString('https://download.srcclr.com/ci.ps1'))
       srcclr scan $(Build.SourcesDirectory)
+  condition: false
 
 - task: VeracodePipelineScan@0
   inputs:
