Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,3 +39,5 @@ steps:
     archiveFile: '$(Build.ArtifactStagingDirectory)/bin.zip'
     replaceExistingArchive: true
     verbose: true
+
+- task: VeracodeScanning@0
