--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,55 +39,49 @@ steps:
     replaceExistingArchive: true
     verbose: true
 
-- task: PowerShell@2
-  displayName: Veracode SCA 
-  env: {SRCCLR_API_TOKEN: $(SRCCLR_API_TOKEN)}
-  inputs:
-    targetType: 'inline'
-    script: |
-      Set-ExecutionPolicy AllSigned -Scope Process -Force
-      iex ((New-Object System.Net.WebClient).DownloadString('https://download.srcclr.com/ci.ps1'))
-      srcclr scan $(Build.SourcesDirectory)
-
+#- task: PowerShell@2
+#  displayName: Veracode SCA 
+#  env: {SRCCLR_API_TOKEN: $(SRCCLR_API_TOKEN)}
+#  inputs:
+#    targetType: 'inline'
+#    script: |
+#      Set-ExecutionPolicy AllSigned -Scope Process -Force
+#      iex ((New-Object System.Net.WebClient).DownloadString('https://download.srcclr.com/ci.ps1'))
+#      srcclr scan $(Build.SourcesDirectory)
 
 - task: Veracode@3
-  displayName: Veracode Policy Scan
   inputs:
-    ConnectionDetailsSelection: 'Endpoint'
+    ConnectionDetailsSelection: 'Service Connection'
     AnalysisService: 'veracode_scan'
-    veracodeAppProfile: 'WebGoat.new'
-    version: '$(Build.BuildId)'
+    veracodeAppProfile: '$(system.teamProject)'
+    version: '$(build.buildNumber)'
     filepath: '$(build.artifactstagingdirectory)/bin.zip'
-    createProfile: true
-    importResults: true
-    maximumWaitTime: '45'
-    failBuildOnPolicyFail: true
-    optargs: '-criticality medium'
+    maximumWaitTime: '360'
   
-- task: Veracode Flaw Importer@3
-  displayName: Veracode Import Scan Findings
-  inputs:
-    ConnectionDetailsSelection: 'Endpoint'
-    AnalysisService: 'veracode_scan'
-    veracodeAppProfile: 'WebGoat.net'
-    sandboxName: 
-    importType: 'All Unmitigated Flaws Violating Policy'
-    workItemType: 'Issue'
-    area: '$(system.teamProject)'
-    flawImportLimit: '1000'
+#- task: Veracode Flaw Importer@3
+#  displayName: Veracode Import Scan Findings
+#  inputs:
+#    ConnectionDetailsSelection: 'Endpoint'
+#    AnalysisService: 'veracode_scan'
+#    veracodeAppProfile: 'WebGoat.net'
+#    sandboxName: 
+#    importType: 'All Unmitigated Flaws Violating Policy'
+#    workItemType: 'Issue'
+#    area: '$(system.teamProject)'
+#    flawImportLimit: '1000'
 
-- task: GithubRelease@0
-  displayName: ‘Create GitHub Release’
-  inputs:
-    githubConnection: wasptree
-    repositoryName: wasptree/WebGoat.NET
-    action: 'create'
-    tagSource: 'manual'
-    tag: '$(Build.BuildNumber)'
-    assets: '$(Build.ArtifactStagingDirectory)\bin.zip'
-    assetUploadMode: delete
+#- task: GithubRelease@0
+#  displayName: ‘Create GitHub Release’
+#  inputs:
+#    githubConnection: wasptree
+#    repositoryName: wasptree/WebGoat.NET
+#    action: 'create'
+#    tagSource: 'manual'
+#    tag: '$(Build.BuildNumber)'
+#    assets: '$(Build.ArtifactStagingDirectory)\bin.zip'
+#    assetUploadMode: delete
 
-- task: VSTest@2
-  inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+#- task: VSTest@2
+#  inputs:
+#    platform: '$(buildPlatform)'
+#    configuration: '$(buildConfiguration)'
